--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,15 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator
+        .serviceWorker
+        .register('/service-worker.js')
+        .then(() => console.log('Service worker installed'))
+        .catch(err => console.log('Service worker error:', err));
+    }
+  </script>
 </body>
 </html>
