--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
   <link rel="manifest" href="/manifest.webmanifest?v=1">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <noscript>
+    <div id="nojs">
+      You appear to have JavaScript disabled on your device.<br>
+      Please go to your device or browser settings and enable JavaScript to use the Parachute app.
+    </div>
+  </noscript>
+
+  <app-root></app-root>
 
   <script>
     if ('serviceWorker' in navigator) {
