refactor: change prefix from app to pa

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </div>
   </noscript>
 
-  <app-root></app-root>
+  <pa-root></pa-root>
 
   <script>
     if ('serviceWorker' in navigator) {
