feat: add Material Design icons

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="/manifest.webmanifest?v=1">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   <style>
     html { box-sizing: border-box; }
     *, *:before, *:after { box-sizing: inherit; }
