--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,26 @@
       -webkit-transition: opacity 0.2s linear; transition: opacity 0.2s linear;
     }
     .splash-inner { display: flex; flex-direction: column; height: 100%; }
-    .splash-body { flex: 1; }
+    .splash-body { flex: 1; display: flex; flex-direction: column; }
     .splash-footer { height: 64px; background: black; }
+    .splash-title {
+      position: relative;
+      min-height: 64px;
+      background: #f5f5f5;
+    }
+    @media (max-width: 600px) and (orientation: portrait) {
+      .splash-title { min-height: 56px; }
+    }
+    .splash-title::before {
+      content: '';
+      display: block;
+      position: absolute; top: 0; right: 0; bottom: 0; left: 0;
+      margin: auto;
+      width: 280px;
+      height: 20px;
+      background: transparent url(/assets/parachute-logo.png) no-repeat;
+      background-size: contain;
+    }
     .splash-logo {
       margin: 16px 0;
       height: 32px;
@@ -46,6 +64,7 @@
       .splash-footer { height: 56px; }
       .splash-logo { margin: 12px 0; }
     }
+    .splash-spinner { flex: 0; margin: auto 0; }
     .shell-spinner {
       font-size: 10px;
       margin: 50px auto;
@@ -101,7 +120,10 @@
   <div class="splash">
     <div class="splash-inner">
       <div class="splash-body">
-        <div class="shell-spinner"></div>
+        <div class="splash-title"></div>
+        <div class="splash-spinner">
+          <div class="shell-spinner"></div>
+        </div>
       </div>
       <div class="splash-footer">
         <div class="splash-logo"></div>
