--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,13 @@
       margin: auto;
       width: 280px;
       height: 20px;
-      background: transparent url(/assets/parachute-logo.png) no-repeat;
+      background: transparent url(assets/parachute-logo.png) no-repeat;
       background-size: contain;
     }
     .splash-logo {
       margin: 16px 0;
       height: 32px;
-      background: url(/assets/mq-logo.png) no-repeat center center;
+      background: url(assets/mq-logo.png) no-repeat center center;
       background-size: contain;
     }
     @media (max-width: 600px) and (orientation: portrait) {
