--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       margin: auto;
       width: 280px;
       height: 20px;
-      background: transparent url(/assets/parachute-logo.png) no-repeat;
+      background: transparent url(assets/parachute-logo.png) no-repeat;
       background-size: contain;
     }
     .splash-logo {
       margin: 16px 0;
       height: 32px;
-      background: url(/assets/mq-logo.png) no-repeat center center;
+      background: url(assets/mq-logo.png) no-repeat center center;
       background-size: contain;
     }
     @media (max-width: 600px) and (orientation: portrait) {
@@ -142,5 +142,5 @@
         .catch(err => console.log('Service worker error:', err));
     }
   </script>
-<script type="text/javascript" src="inline.a4908809e8de6844eada.bundle.js"></script><script type="text/javascript" src="main.8b070eae61eb8616ae54.bundle.js"></script></body>
+<script type="text/javascript" src="inline.360baac7f95d40532fdb.bundle.js"></script><script type="text/javascript" src="main.1d4c7b0927cb8001d336.bundle.js"></script></body>
 </html>
