--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <base href="/mq-parachute-pwa/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="/manifest.webmanifest?v=1">
 
@@ -108,7 +110,7 @@
       100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
     }
   </style>
-<link href="styles.286bba664bb3c2669463.bundle.css" rel="stylesheet"></head>
+<link href="styles.0bfda49d558a0ab356ed.bundle.css" rel="stylesheet"></head>
 <body class="loading">
   <noscript>
     <div id="nojs">
@@ -142,5 +144,5 @@
         .catch(err => console.log('Service worker error:', err));
     }
   </script>
-<script type="text/javascript" src="inline.360baac7f95d40532fdb.bundle.js"></script><script type="text/javascript" src="main.1d4c7b0927cb8001d336.bundle.js"></script></body>
+<script type="text/javascript" src="inline.f8f893451efd4de9f9dc.bundle.js"></script><script type="text/javascript" src="main.bff5c58ef4ef7d698c2c.bundle.js"></script></body>
 </html>
