--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/icon=120x120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/icon=152x152.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="assets/icons/icon=167x167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/icon=180x180.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="/manifest.webmanifest?v=1">
 
