--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     if ('serviceWorker' in navigator) {
       navigator
         .serviceWorker
-        .register('/service-worker.js')
+        .register('service-worker.js')
         .then(() => console.log('Service worker installed'))
         .catch(err => console.log('Service worker error:', err));
     }
